fixed overflow issue in mobile

--- a/sass/globals/_boilerplate.scss
+++ b/sass/globals/_boilerplate.scss
@@ -17,8 +17,11 @@
 body {
   font-size: 100% !important;
   background-color: #01030b;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   color: white;
+}
+html {
+  overflow-x: hidden !important;
 }
 
 a,
